proconio/tests/ui/fastout/print-macros-in-closures.rs
use proconio::fastout;

#[fastout]
fn main() {
    let _ = || println!("Hi");
}
